# interview_flutter

./: readme.md
ffi_test_pkg/: README.md  pubspec.yaml
ffi_test_pkg/lib/: bindings.dart  read_data.dart
ffi_test_pkg/src/: CMakeLists.txt  libtest_lib.1.0.0.dylib  libtest_lib.1.dylib  libtest_lib.dylib  libtest_lib.so.1  libtest_lib.so.1.0.0  test_lib.c  test_lib.def  test_lib.h
ffi_test_pkg/test/: ffi_test_pkg_test.dart
